dummy photos updated for 1st client look

--- a/CTC.html
+++ b/CTC.html
@@ -32,7 +32,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="col-md-12 products-right">
 
                 <div class="col-sm-2 men-wear-left">
-                    <img class="img-responsive" src="images/bb2.jpg" alt=" " width ="150" height="150"/>
+                    <img class="img-responsive" src="images/dummy_prod_shop_3.jpg" alt=" " width ="150" height="150"/>
                 </div>
                 <div class="col-sm-10 men-wear-right">
                     <h4>CTC <span> Tea</span></h4>
@@ -51,8 +51,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-md-3 product-men">
                 <div class="men-pro-item simpleCart_shelfItem">
                     <div class="men-thumb-item">
-                        <img src="images/m1.jpg" alt="" class="pro-image-front">
-                        <img src="images/m1.jpg" alt="" class="pro-image-back">
+                        <img src="images/dummy_prod_shop_1.jpg" alt="" class="pro-image-front">
+                        <img src="images/dummy_prod_shop_2.jpg" alt="" class="pro-image-back">
                     </div>
                     <div class="item-info-product ">
                         <h4><a href="single.html" id="CTCODOXPRODUCTB-name">CTC Product B</a></h4>
@@ -71,8 +71,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-md-3 product-men">
                 <div class="men-pro-item simpleCart_shelfItem">
                     <div class="men-thumb-item">
-                        <img src="images/m1.jpg" alt="" class="pro-image-front">
-                        <img src="images/m1.jpg" alt="" class="pro-image-back">
+                        <img src="images/dummy_prod_shop_1.jpg" alt="" class="pro-image-front">
+                        <img src="images/dummy_prod_shop_2.jpg" alt="" class="pro-image-back">
                     </div>
                     <div class="item-info-product ">
                         <h4><a href="single.html" id="CTCODOXPRODUCTC-name">CTC Product C</a></h4>
@@ -91,8 +91,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-md-3 product-men">
                 <div class="men-pro-item simpleCart_shelfItem">
                     <div class="men-thumb-item">
-                        <img src="images/m1.jpg" alt="" class="pro-image-front">
-                        <img src="images/m1.jpg" alt="" class="pro-image-back">
+                        <img src="images/dummy_prod_shop_1.jpg" alt="" class="pro-image-front">
+                        <img src="images/dummy_prod_shop_2.jpg" alt="" class="pro-image-back">
                     </div>
                     <div class="item-info-product ">
                         <h4><a href="single.html" id="CTCODOXPRODUCTM-name">CTC Product M</a></h4>
@@ -111,8 +111,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-md-3 product-men">
                 <div class="men-pro-item simpleCart_shelfItem">
                     <div class="men-thumb-item">
-                        <img src="images/m1.jpg" alt="" class="pro-image-front">
-                        <img src="images/m1.jpg" alt="" class="pro-image-back">
+                        <img src="images/dummy_prod_shop_1.jpg" alt="" class="pro-image-front">
+                        <img src="images/dummy_prod_shop_2.jpg" alt="" class="pro-image-back">
                     </div>
                     <div class="item-info-product ">
                         <h4><a href="single.html" id="CTCPRODUCTA-name">CTC Product A</a></h4>
