--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -50,7 +45,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="carousel-caption">
 						<h3> Our special <span>CTC</span> Tea</h3>
 						<p>A little details about CTC Tea</p>
-						<a class="hvr-outline-out button2" href="womens.html">Shop Now </a>
+						<a class="hvr-outline-out button2" href="CTC.html">Shop Now </a>
 					</div>
 				</div>
 			</div>
@@ -59,7 +54,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="carousel-caption">
                         <h3> Our special <span>Orthodox</span> Blend</h3>
 						<p>A little details about Orthodox Tea</p>
-						<a class="hvr-outline-out button2" href="womens.html">Shop Now </a>
+						<a class="hvr-outline-out button2" href="shop.html">Shop Now </a>
 					</div>
 				</div>
 			</div>
@@ -68,7 +63,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="carousel-caption">
                         <h3> Our special <span>Green</span> Tea</h3>
 						<p>A little details about Green Tea</p>
-						<a class="hvr-outline-out button2" href="womens.html">Shop Now </a>
+						<a class="hvr-outline-out button2" href="shop.html">Shop Now </a>
 					</div>
 				</div>
 			</div>
@@ -77,7 +72,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="carousel-caption">
                         <h3> Our special <span>Speciality</span> Blend</h3>
 						<p> little details about Speciality Tea</p>
-						<a class="hvr-outline-out button2" href="womens.html">Shop Now </a>
+						<a class="hvr-outline-out button2" href="shop.html">Shop Now </a>
 					</div>
 				</div>
 			</div>
@@ -86,7 +81,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="carousel-caption">
                         <h3> Our special <span>Flavoured</span> Tea</h3>
 						<p> little details about Flavoured Tea</p>
-						<a class="hvr-outline-out button2" href="womens.html">Shop Now </a>
+						<a class="hvr-outline-out button2" href="shop.html">Shop Now </a>
 					</div>
 				</div>
 			</div>
@@ -113,8 +108,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-md-2">
                 <div class="men-pro-item simpleCart_shelfItem">
                     <div class="men-thumb-item">
-                        <img src="images/Upper_Reg_1_Front.jpg" alt="" class="pro-image-front" height="200" width="100%">
-                        <img src="images/Upper_Reg_1_Back.jpg" alt="" class="pro-image-back" height="200" width="100%">
+                        <img src="images/dummy_tea_index_1.jpg" alt="" class="pro-image-front" height="200" width="100%">
+                        <img src="images/dummy_tea_index_2.jpg" alt="" class="pro-image-back" height="200" width="100%">
                         <div class="men-cart-pro">
                             <div class="inner-men-cart-pro">
                                 <a href="single.html" class="link-product-add-cart">Explore Now</a>
@@ -130,8 +125,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-md-2">
                 <div class="men-pro-item simpleCart_shelfItem">
                     <div class="men-thumb-item">
-                        <img src="images/Upper_Reg_1_Front.jpg" alt="" class="pro-image-front" height="200" width="100%">
-                        <img src="images/Upper_Reg_1_Back.jpg" alt="" class="pro-image-back" height="200" width="100%">
+                        <img src="images/dummy_tea_index_1.jpg" alt="" class="pro-image-front" height="200" width="100%">
+                        <img src="images/dummy_tea_index_2.jpg" alt="" class="pro-image-back" height="200" width="100%">
                         <div class="men-cart-pro">
                             <div class="inner-men-cart-pro">
                                 <a href="single.html" class="link-product-add-cart">Explore Now</a>
@@ -147,8 +142,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-md-2">
                 <div class="men-pro-item simpleCart_shelfItem">
                     <div class="men-thumb-item">
-                        <img src="images/Upper_Reg_1_Front.jpg" alt="" class="pro-image-front" height="200" width="100%">
-                        <img src="images/Upper_Reg_1_Back.jpg" alt="" class="pro-image-back" height="200" width="100%">
+                        <img src="images/dummy_tea_index_1.jpg" alt="" class="pro-image-front" height="200" width="100%">
+                        <img src="images/dummy_tea_index_2.jpg" alt="" class="pro-image-back" height="200" width="100%">
                         <div class="men-cart-pro">
                             <div class="inner-men-cart-pro">
                                 <a href="single.html" class="link-product-add-cart">Explore Now</a>
@@ -164,8 +159,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-md-2">
                 <div class="men-pro-item simpleCart_shelfItem">
                     <div class="men-thumb-item">
-                        <img src="images/Upper_Reg_1_Front.jpg" alt="" class="pro-image-front" height="200" width="100%">
-                        <img src="images/Upper_Reg_1_Back.jpg" alt="" class="pro-image-back" height="200" width="100%">
+                        <img src="images/dummy_tea_index_1.jpg" alt="" class="pro-image-front" height="200" width="100%">
+                        <img src="images/dummy_tea_index_2.jpg" alt="" class="pro-image-back" height="200" width="100%">
                         <div class="men-cart-pro">
                             <div class="inner-men-cart-pro">
                                 <a href="single.html" class="link-product-add-cart">Explore Now</a>
@@ -181,8 +176,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-md-2">
                 <div class="men-pro-item simpleCart_shelfItem">
                     <div class="men-thumb-item">
-                        <img src="images/Upper_Reg_1_Front.jpg" alt="" class="pro-image-front" height="200" width="100%">
-                        <img src="images/Upper_Reg_1_Back.jpg" alt="" class="pro-image-back" height="200" width="100%">
+                        <img src="images/dummy_tea_index_1.jpg" alt="" class="pro-image-front" height="200" width="100%">
+                        <img src="images/dummy_tea_index_2.jpg" alt="" class="pro-image-back" height="200" width="100%">
                         <div class="men-cart-pro">
                             <div class="inner-men-cart-pro">
                                 <a href="single.html" class="link-product-add-cart">Explore Now</a>
@@ -198,8 +193,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-md-2">
                 <div class="men-pro-item simpleCart_shelfItem">
                     <div class="men-thumb-item">
-                        <img src="images/Upper_Reg_1_Front.jpg" alt="" class="pro-image-front" height="200" width="100%">
-                        <img src="images/Upper_Reg_1_Back.jpg" alt="" class="pro-image-back" height="200" width="100%">
+                        <img src="images/dummy_tea_index_1.jpg" alt="" class="pro-image-front" height="200" width="100%">
+                        <img src="images/dummy_tea_index_2.jpg" alt="" class="pro-image-back" height="200" width="100%">
                         <div class="men-cart-pro">
                             <div class="inner-men-cart-pro">
                                 <a href="single.html" class="link-product-add-cart">Explore Now</a>
@@ -221,7 +216,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- /we-offer -->
 		<div class="sale-w3ls">
 			<div class="container">
-				    <a class="hvr-outline-out button2" href="single.html">Shop Now </a>
+				    <a class="hvr-outline-out button2" href="shop.html">Shop Now </a>
 			</div>
 		</div>
 	<!-- //we-offer -->
