--- a/shop.html
+++ b/shop.html
@@ -75,8 +75,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="col-md-4 product-men">
                     <div class="men-pro-item simpleCart_shelfItem">
                         <div class="men-thumb-item">
-                            <img src="images/m1.jpg" alt="" class="pro-image-front">
-                            <img src="images/m1.jpg" alt="" class="pro-image-back">
+                            <img src="images/dummy_prod_shop_1.jpg" alt="" class="pro-image-front">
+                            <img src="images/dummy_prod_shop_2.jpg" alt="" class="pro-image-back">
                         </div>
                         <div class="item-info-product ">
                             <h4><a href="single.html" id="CTCPRODUCTA-name">CTC Product A</a></h4>
@@ -96,8 +96,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="col-md-4 product-men">
                     <div class="men-pro-item simpleCart_shelfItem">
                         <div class="men-thumb-item">
-                            <img src="images/m1.jpg" alt="" class="pro-image-front">
-                            <img src="images/m1.jpg" alt="" class="pro-image-back">
+                            <img src="images/dummy_prod_shop_1.jpg" alt="" class="pro-image-front">
+                            <img src="images/dummy_prod_shop_2.jpg" alt="" class="pro-image-back">
                         </div>
                         <div class="item-info-product ">
                             <h4><a href="single.html" id="ORTHODOXPRODUCTB-name">Orthodox Product B</a></h4>
@@ -117,8 +117,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="col-md-4 product-men">
                     <div class="men-pro-item simpleCart_shelfItem">
                         <div class="men-thumb-item">
-                            <img src="images/m1.jpg" alt="" class="pro-image-front">
-                            <img src="images/m1.jpg" alt="" class="pro-image-back">
+                            <img src="images/dummy_prod_shop_1.jpg" alt="" class="pro-image-front">
+                            <img src="images/dummy_prod_shop_2.jpg" alt="" class="pro-image-back">
                         </div>
                         <div class="item-info-product ">
                             <h4><a href="single.html" id="CTCODOXPRODUCTB-name">CTC Product B</a></h4>
@@ -142,8 +142,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-md-3 product-men">
                 <div class="men-pro-item simpleCart_shelfItem">
                     <div class="men-thumb-item">
-                        <img src="images/m1.jpg" alt="" class="pro-image-front">
-                        <img src="images/m1.jpg" alt="" class="pro-image-back">
+                        <img src="images/dummy_prod_shop_1.jpg" alt="" class="pro-image-front">
+                        <img src="images/dummy_prod_shop_2.jpg" alt="" class="pro-image-back">
                     </div>
                     <div class="item-info-product ">
                         <h4><a href="single.html">Product A</a></h4>
@@ -162,8 +162,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-md-3 product-men">
                 <div class="men-pro-item simpleCart_shelfItem">
                     <div class="men-thumb-item">
-                        <img src="images/m1.jpg" alt="" class="pro-image-front">
-                        <img src="images/m1.jpg" alt="" class="pro-image-back">
+                        <img src="images/dummy_prod_shop_2.jpg" alt="" class="pro-image-front">
+                        <img src="images/dummy_prod_shop_2.jpg" alt="" class="pro-image-back">
                     </div>
                     <div class="item-info-product ">
                         <h4><a href="single.html">Product A</a></h4>
@@ -182,8 +182,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-md-3 product-men">
                 <div class="men-pro-item simpleCart_shelfItem">
                     <div class="men-thumb-item">
-                        <img src="images/m1.jpg" alt="" class="pro-image-front">
-                        <img src="images/m1.jpg" alt="" class="pro-image-back">
+                        <img src="images/dummy_prod_shop_1.jpg" alt="" class="pro-image-front">
+                        <img src="images/dummy_prod_shop_1.jpg" alt="" class="pro-image-back">
                     </div>
                     <div class="item-info-product ">
                         <h4><a href="single.html">Product A</a></h4>
@@ -202,8 +202,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-md-3 product-men">
                 <div class="men-pro-item simpleCart_shelfItem">
                     <div class="men-thumb-item">
-                        <img src="images/m1.jpg" alt="" class="pro-image-front">
-                        <img src="images/m1.jpg" alt="" class="pro-image-back">
+                        <img src="images/dummy_prod_shop_1.jpg" alt="" class="pro-image-front">
+                        <img src="images/dummy_prod_shop_1.jpg" alt="" class="pro-image-back">
                     </div>
                     <div class="item-info-product ">
                         <h4><a href="single.html">Product A</a></h4>
