--- a/single.html
+++ b/single.html
@@ -54,14 +54,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="flexslider">
 					
 					<ul class="slides">
-						<li data-thumb="images/d2.jpg" id="single-image-1">
-							<div class="thumb-image"> <img src="images/d2.jpg" data-imagezoom="true" class="img-responsive"> </div>
+						<li data-thumb="images/dummy_prod_shop_1.jpg" id="single-image-1">
+							<div class="thumb-image"> <img src="images/dummy_prod_shop_1.jpg" data-imagezoom="true" class="img-responsive"> </div>
 						</li>
-						<li data-thumb="images/d1.jpg">
-							<div class="thumb-image"> <img src="images/d1.jpg" data-imagezoom="true" class="img-responsive"> </div>
+						<li data-thumb="images/dummy_prod_shop_2.jpg">
+							<div class="thumb-image"> <img src="images/dummy_prod_shop_2.jpg" data-imagezoom="true" class="img-responsive"> </div>
 						</li>	
-						<li data-thumb="images/d3.jpg">
-							<div class="thumb-image"> <img src="images/d3.jpg" data-imagezoom="true" class="img-responsive"> </div>
+						<li data-thumb="images/dummy_prod_shop_3.jpg">
+							<div class="thumb-image"> <img src="images/dummy_prod_shop_3.jpg" data-imagezoom="true" class="img-responsive"> </div>
 						</li>
 					</ul>
 					<div class="clearfix"></div>
