--- a/tst.html
+++ b/tst.html
@@ -15,7 +15,7 @@
                     <div class="men-pro-item simpleCart_shelfItem">
                         <div class="men-thumb-item">
                             <img src="images/Upper_Reg_1_Front.jpg" alt="" class="pro-image-front" height="291">
-                            <img src="images/Upper_Reg_1_Back.jpg" alt="" class="pro-image-back" height="291">
+                            <img src="images/dummy_tea_index_1.jpg" alt="" class="pro-image-back" height="291">
                             <div class="men-cart-pro">
                                 <div class="inner-men-cart-pro">
                                     <a href="single.html" class="link-product-add-cart">Quick View</a>
